--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
- <html>
-   <head>
-    <title>Vision Artificial con python</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="StyleSheet" href="./css/index.css" type="text/css" media="screen" >
-   </head>
-   <body>
-     <h1>Hello, world!</h1>
-
-   </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel=StyleSheet HREF="./style/index.css" TYPE="text/css" MEDIA=screen>
+  <title>Parking UD</title>
+</head>
+<body>
+  <div class="Container"> 
+    <div class="Container-Header">
+      <h1 class="Title">
+        PARKING UD 
+        FACULTAD TECNOLOGICA
+      </h1>
+    </div>
+    <div class="Container-Main">
+      <p class="Text">
+        Bienvenido a la Web del parqueadero de la Facultad Tecnologica de la Universidad Distrital Francisco Jose de Caldas
+      </p>
+    </div>
+    <div class="Container-Footer">
+      <a class="Boton" href="./pages/datosactuales.html">
+        DATOS
+        ACTUALES
+      </a>
+      <a class="Boton" href="./pages/ultimosdatos.html">
+        ULTIMOS
+        DATOS
+      </a>
+    </div>
+  </div>
+</body>
 </html>
