--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="Container"> 
     <div class="Container-Header">
+      <img src="./assets/universidad-distrital.jpg"/>
       <h1 class="Title">
         PARKING UD 
         FACULTAD TECNOLOGICA
